<resources>
    <string name="app_name">P01-DailyGoals</string>
    <string name="prompt">Did I achieve this goal today?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question1">Read up on materials before class</string>
    <string name="question2">Arrive on time so as not to miss important part of the lesson</string>
    <string name="question3">Attempt the problem myself</string>
    <string name="question4">My personal reflection today</string>
    <string name="btn">OK</string>
    <string name="button2">BACK</string>
</resources>
